Fix missing check for sampling profiler enable reporting feature.

Also removes the wrapper function since things are simpler with
the base::Feature API.

BUG=763475

Change-Id: I5d0861205e5c8b088ac780d525c3bbfdccea85e6
Reviewed-on: https://chromium-review.googlesource.com/658121
Reviewed-by: Mike Wittman <wittman@chromium.org>
Commit-Queue: Alexei Svitkine <asvitkine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#500659}
Former-commit-id: 47b0ad91d5f12a50faab31a716d00680002e8328